[tool.poetry]
name = "otterly"
version = "0.1.0"
description = ""
authors = ["Lasse Friedrich <Lasse.Friedrich@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torchvision = "^0.18.0"
matplotlib = "^3.8.4"
tensorboard = "^2.16.2"
torch = "^2.3.0"
ipykernel = "^6.29.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
